{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 109,
  "lineage": "5018bd3c-ea51-4855-bf2f-37cae689d7fe",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148272449925:subnet/subnet-1af48d7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "id": "subnet-1af48d7f",
            "map_public_ip_on_launch": true,
            "owner_id": "148272449925",
            "state": "available",
            "vpc_id": "vpc-b35ec6d5"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148272449925:subnet/subnet-063c6b2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "id": "subnet-063c6b2b",
            "map_public_ip_on_launch": true,
            "owner_id": "148272449925",
            "state": "available",
            "vpc_id": "vpc-b35ec6d5"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148272449925:subnet/subnet-d0737799",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-d0737799",
            "map_public_ip_on_launch": true,
            "owner_id": "148272449925",
            "state": "available",
            "vpc_id": "vpc-b35ec6d5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148272449925:vpc/vpc-b35ec6d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-f03f1096",
            "default_route_table_id": "rtb-618b2e18",
            "default_security_group_id": "sg-26ef895a",
            "dhcp_options_id": "dopt-e99b008e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-b35ec6d5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-618b2e18",
            "owner_id": "148272449925"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a208c7cdba991ea",
            "arn": "arn:aws:ec2:us-east-1:148272449925:instance/i-0391fee376e8c1231",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo-host",
            "id": "i-0391fee376e8c1231",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-05cda6f1a13a04f4d",
            "private_dns": "ip-172-31-74-196.ec2.internal",
            "private_ip": "172.31.74.196",
            "public_dns": "ec2-54-147-112-115.compute-1.amazonaws.com",
            "public_ip": "54.147.112.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0104d35ac7cfdbd61",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo-common",
              "demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1af48d7f",
            "tags": {
              "Name": "demo-control_plane-1",
              "kubernetes.io/cluster/demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-000763e2b3f668ec0",
              "sg-0d712f7610718ed6d"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a208c7cdba991ea",
            "arn": "arn:aws:ec2:us-east-1:148272449925:instance/i-028d36c1b6175cdd3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo-host",
            "id": "i-028d36c1b6175cdd3",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5edced1c8c6fa07",
            "private_dns": "ip-172-31-54-48.ec2.internal",
            "private_ip": "172.31.54.48",
            "public_dns": "ec2-54-208-64-195.compute-1.amazonaws.com",
            "public_ip": "54.208.64.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-099b0a9b20a3375c3",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo-common",
              "demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-063c6b2b",
            "tags": {
              "Name": "demo-control_plane-2",
              "kubernetes.io/cluster/demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-000763e2b3f668ec0",
              "sg-0d712f7610718ed6d"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a208c7cdba991ea",
            "arn": "arn:aws:ec2:us-east-1:148272449925:instance/i-05ed91a2dc7bc1c12",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo-host",
            "id": "i-05ed91a2dc7bc1c12",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-02fd49e3a658af9c2",
            "private_dns": "ip-172-31-2-118.ec2.internal",
            "private_ip": "172.31.2.118",
            "public_dns": "ec2-54-147-154-17.compute-1.amazonaws.com",
            "public_ip": "54.147.154.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0080dcf8cebb31ad8",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo-common",
              "demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d0737799",
            "tags": {
              "Name": "demo-control_plane-3",
              "kubernetes.io/cluster/demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-000763e2b3f668ec0",
              "sg-0d712f7610718ed6d"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:148272449925:loadbalancer/net/demo-api-lb/fe7fccd03fbd6e4a",
            "arn_suffix": "net/demo-api-lb/fe7fccd03fbd6e4a",
            "dns_name": "demo-api-lb-fe7fccd03fbd6e4a.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:148272449925:loadbalancer/net/demo-api-lb/fe7fccd03fbd6e4a",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "demo-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-063c6b2b"
              },
              {
                "subnet_id": "subnet-1af48d7f"
              },
              {
                "subnet_id": "subnet-d0737799"
              }
            ],
            "subnets": [
              "subnet-063c6b2b",
              "subnet-1af48d7f",
              "subnet-d0737799"
            ],
            "tags": {
              "Cluster": "demo",
              "kubernetes.io/cluster/demo": "shared"
            },
            "vpc_id": "vpc-b35ec6d5",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:148272449925:listener/net/demo-api-lb/fe7fccd03fbd6e4a/6220b540c4f88ce0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:148272449925:targetgroup/demo-api/b43e2d5d2e75fba3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:148272449925:listener/net/demo-api-lb/fe7fccd03fbd6e4a/6220b540c4f88ce0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:148272449925:loadbalancer/net/demo-api-lb/fe7fccd03fbd6e4a",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:148272449925:targetgroup/demo-api/b43e2d5d2e75fba3",
            "arn_suffix": "targetgroup/demo-api/b43e2d5d2e75fba3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:148272449925:targetgroup/demo-api/b43e2d5d2e75fba3",
            "lambda_multi_value_headers_enabled": false,
            "name": "demo-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-b35ec6d5"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:148272449925:targetgroup/demo-api/b43e2d5d2e75fba3-20191223225408726300000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:148272449925:targetgroup/demo-api/b43e2d5d2e75fba3",
            "target_id": "i-0391fee376e8c1231"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:148272449925:targetgroup/demo-api/b43e2d5d2e75fba3-20191223225408794200000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:148272449925:targetgroup/demo-api/b43e2d5d2e75fba3",
            "target_id": "i-028d36c1b6175cdd3"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:148272449925:targetgroup/demo-api/b43e2d5d2e75fba3-20191223225408741900000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:148272449925:targetgroup/demo-api/b43e2d5d2e75fba3",
            "target_id": "i-05ed91a2dc7bc1c12"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148272449925:security-group/sg-0d712f7610718ed6d",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d712f7610718ed6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "demo-common",
            "name_prefix": null,
            "owner_id": "148272449925",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/demo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-b35ec6d5"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148272449925:security-group/sg-000763e2b3f668ec0",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-000763e2b3f668ec0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "demo-control_planes",
            "name_prefix": null,
            "owner_id": "148272449925",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/demo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-b35ec6d5"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}